2007-07-30  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/core/termview.cpp (CTermView::DrawSpaceFillingChar),
	src/core/termview.h: Fix bug in rendering ASCII characters.
	
	* configure.ac: Bump version number to 0.3.6 .

2007-07-28  Jim Huang  <jserv@openmoko.org>

	* src/pcmanx_gtk2.cpp (main): Disable glib's own malloc/free wrapper
	while --enable-debug.
	glib introduces its own memory management mechanism, which confuses
	memory debuggers such as valgrind and disable their own wrapper
	against the applications.

	* plugin/src/plugin.cpp,
	plugin/src/plugin.h: Remove <X11/Intrinsic.h> and <X11/cursorfont.h>
	because recently xlib package has changed the headers.

	* configure.ac: Added c3|c3_2|x86_64 to MMX supported arch.
	Added warning to libnotify when popup notifier support is not enabled.

2007-07-27  Kanru Chen  <koster@debian.org.tw>

	* src/core/termview.cpp:
	Draw characters that are not handled in CTermView::DrawSpaceFillingChar.

2007-07-26  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/core/termview.cpp:
	Fix bugs in CTermView::DrawSpaceFillingChar and use some workarounds to
	overcome the serious bugs in gtk+ itself.

2007-07-26  PCMan (Hong Jen Yee)  <pcman.tw@gmail.com>

	* src/core/termview.cpp,
	src/core/termview.h:
	Dramatically optimize the displaying of space-filling characters used to
	draw ASCII arts.

2007-06-10  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Disable GCC Visibility when --enable-debug.
	It's important to help resolving problems. Applied CXXFLAGS +=
	"-fvisibility-inlines-hidden" for better visibility tweaks.

2007-06-08  Jim Huang  <jserv.tw@gmail.com>

	* src/core/caret.h (CCaret::~CCaret) (CCaret::Hide) (CCaret::Show),
	src/core/termdata.h (CTermCharAttr::m_DefaultColorTable),
	src/core/site.h (CSite::SaveToFile) (CSite::CSite) (CSite::~CSite),
	src/core/termsel.h (CTermSelection::NewStart)
	(CTermSelection::ChangeEnd) (CTermSelection::SelectPage)
	(CTermSelection::Empty),